--- a/styles/pages/Home.module.scss
+++ b/styles/pages/Home.module.scss
@@ -1,4 +1,17 @@
 @use '../mixins';
+.home {
+  text-align: center;
+
+  h1 {
+    font-size: 2.5rem;
+  }
+  p {
+    font-size: 1.1rem;
+  }
+  h2 {
+    margin-top: 4rem;
+  }
+}
 
 @include mixins.tablet() {
 }
